--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.taskmaster_1">
 
     <application
@@ -8,7 +9,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TaskMaster1">
+        android:theme="@style/Theme.TaskMaster1"
+        tools:ignore="ExtraText">
+        android:name=".taskmaster1  "
+        ...
         <activity
             android:name=".Onedish"
             android:exported="true" />
@@ -33,6 +37,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Add the android:name attribute to the application node -->
+
     </application>
 
 </manifest>
